# 5_Parser_ini_File

./: 5_Parser_ini_File.sln  README.md
5_Parser_ini_File/: 5_Parser_ini_File.cpp  5_Parser_ini_File.vcxproj  5_Parser_ini_File.vcxproj.filters  CMakeLists.txt  file1.ini  file2.ini  file3.ini  file4.ini  file5.ini
